Fixes #3306: added arrow symbols to accordion for high contrast (images off) mode.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@9259 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -825,9 +825,29 @@ body .dijitAlignClient { position: absolute; }
 }
 
 .dijitAccordionPane .title .arrow {
-	float:right;
+	float: right;
 }
 
+/* images off, high-contrast mode styles */
+.dijitAccordionPane .title .arrowTextUp,
+.dijitAccordionPane .title .arrowTextDown {
+	display: none; 
+	float: right;
+	font-size: 0.65em; 
+	font-weight: normal !important;
+}
+
+.dijit_a11y .dijitAccordionPane .title .arrowTextUp { 
+	display: inline; 
+}
+
+.dijit_a11y .dijitAccordionPane-selected .title .arrowTextDown {
+	display: inline; 
+}
+
+.dijit_a11y .dijitAccordionPane-selected .title .arrowTextUp {
+	display: none; 
+}
 
 /* Calendar */
 
